# commit_message

./: .gitignore  .travis.yml  Cargo.toml  README.md
src/: branch_utils.rs  lib.rs  main.rs  path_utils.rs  prompts.rs  storage.rs
tests/: commit_message.rs
